--- a/src/app.yaml
+++ b/src/app.yaml
@@ -3,3 +3,13 @@ version: 1
 runtime: python
 api_version: 1
 
+handlers:
+- url: /_ah/mail/.+
+  script: mail.py
+  login: admin
+- url: /cron/notify
+  script: notify.py
+  login: admin
+
+inbound_services:
+- mail
