--- a/src/cron.yaml
+++ b/src/cron.yaml
@@ -1,7 +1,10 @@
 cron:
 - description: Send rain notifications
-  url: /cron/notify
-  schedule: every 2 hours
+  url: /cron/notify/hourly
+  schedule: every 3 hours
+- description: Send daily rain notifications
+  url: /cron/notify/daily
+  schedule: every 24 hours
 - description: Fetch weather forecast
   url: /cron/fetch
   schedule: every 2 hours
