Taskqueue support to avoid long requests and high cpu usage. Also, new commands were added

--- a/src/app.yaml
+++ b/src/app.yaml
@@ -7,18 +7,15 @@ handlers:
 - url: /_ah/mail/.+
   script: mail.py
   login: admin
-
 - url: /cron/notify/.+
   script: notify.py
   login: admin
 - url: /cron/fetch
   script: fetch.py
   login: admin
-
-- url: /task/fetch_location
+- url: /task/fetchlocation
   script: location_fetch.py
-  login:admin
-
+  login: admin
 - url: /favicon.ico
   static_files: static/images/favicon.ico
   upload: static/images/favicon.ico
