Work done to allow for multiple weather scrappers & hourly notifications use current weather data instead of future forecasts

--- a/src/cron.yaml
+++ b/src/cron.yaml
@@ -1,7 +1,7 @@
 cron:
 - description: Send rain notifications
-  url: /cron/notify/hourly
-  schedule: every 6 hours
+  url: /cron/notify/fetch
+  schedule: every 4 hours
 - description: Send daily rain notifications
   url: /cron/notify/daily
   schedule: every 22 hours
